--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -1,6 +1,9 @@
-<a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table align=center border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/11.jpg" title="头条要闻" alt="头条要闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/13.jpg" title="专题" alt="专题"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p><a href="https://github.com/1992513/www/blob/master/README.md?gjdtvv#1" target="_blank">首页</a> | <a href="https://d18bx7gz18d1cs.cloudfront.net/1?bfhesmw" target="_blank">动态网</a> | <a href="https://d2csrn8d5ncbve.cloudfront.net/2?iayqwsuk" target="_blank">大纪元</a> | <a href="https://d2jsgnf2snq1t5.cloudfront.net/4?miycogb" target="_blank">看中国</a> | <a href="https://d3c3t179l61pwn.cloudfront.net/pHh5q?pienox" target="_blank">新生网</a> | <a href="https://djwddd4nnr0na.cloudfront.net/tktpt?mjegpp" target="_blank">阿波罗网</a> | <a href="https://dtjix0ckmebpi.cloudfront.net/Mjpvu?bwbwczd" target="_blank">干净世界</a> | <a href="https://d15m60lsma25jk.cloudfront.net/10?zytthunj" target="_blank">退党服务</a> | <a href="https://dkx26vh7i5y84.cloudfront.net/Rffqf?qfasq" target="_blank">明慧广播</a> | <a href="https://dryak9kcfpt3j.cloudfront.net/nw9Vn?ccqckbxge" target="_blank">传奇时代</a> | <a href="https://d2fq83y0z2h6n4.cloudfront.net/AF9AG?vlwey" target="_blank">新境界影视</a> | <a href="https://d3abchfok6e2j.cloudfront.net/zqMQA?efakivpj" target="_blank">文昭谈论</a> | <a href="https://d2iiqnrx4rrboe.cloudfront.net/7?mijnxjgh" target="_blank">明慧</a></p><p><a href="https://d12ogqhrsnt8ma.cloudfront.net/9?coxac" target="_blank">大法</a> | <a href="https://dnfbwsos78njn.cloudfront.net/3?kfomovhb" target="_blank">新唐人</a> | <a href="https://d1ogsjff5jad5d.cloudfront.net/obAhT?pnghpz" target="_blank">人民报</a> | <a href="https://d169wr9ny4m3ww.cloudfront.net/xXNHu?agmunf" target="_blank">放光明</a> | <a href="https://dh9kqnflpbxz3.cloudfront.net/5?xujjp" target="_blank">新纪元</a> | <a href="https://d1f01xri6nyv0g.cloudfront.net/6?fewuuorg" target="_blank">希望之声</a> | <a href="https://dm41kyod3ht9r.cloudfront.net/11?qvvocw" target="_blank">无界网络</a> | <a href="https://d3q99y09eaol9n.cloudfront.net/Pueji?hyjdbolje" target="_blank">追查国际</a> | <a href="https://d2p23c289x62lr.cloudfront.net/16?jeeobzlra" target="_blank">明慧之窗</a> | <a href="https://d11dfuybe1ur8g.cloudfront.net/LdvzZ?zqavcmtwl" target="_blank">细语人生</a> | <a href="https://d1f01xri6nyv0g.cloudfront.net/fBn3r?szkzvqzfr" target="_blank">新世纪影视</a> | <a href="https://dd92z3w2j4w9k.cloudfront.net/PUWMb?pkeoq" target="_blank">江峰时刻</a> | <a href="https://d1qf0g0z67vzsk.cloudfront.net/8?nciogtjx" target="_blank">正见</a></p></td></tr>
-<tr><td VALIGN=TOP width="370" height="1000"><a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309935.md#1"><img width="320" src="https://i.epochtimes.com/assets/uploads/2024/08/id14309954-ea0969ec03ce5a529b906af6afc7fe76-320x200.jpg"><p align="center">加州华人区突发4.4级地震 震感强烈 房子晃动</p></a>
-<a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309935.md#1" title="加州华人区突发4.4级地震 震感强烈 房子晃动""><img width="73" src="https://i.epochtimes.com/assets/uploads/2024/08/id14309954-ea0969ec03ce5a529b906af6afc7fe76-320x200.jpg">&nbsp;</a>
+<a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table align=center border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/11.jpg" title="头条要闻" alt="头条要闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/13.jpg" title="专题" alt="专题"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p><a href="https://github.com/1992513/www/blob/master/README.md?pvsulxev#1" target="_blank">首页</a> | <a href="https://d1k1m1fxotwyij.cloudfront.net/1?fbwwqne" target="_blank">动态网</a> | <a href="https://d1qri8o0k49d18.cloudfront.net/2?exjkkemb" target="_blank">大纪元</a> | <a href="https://d1fejrztdgsube.cloudfront.net/4?xtgwwzk" target="_blank">看中国</a> | <a href="https://d1or6b2roqil0x.cloudfront.net/pHh5q?gbwkhxf" target="_blank">新生网</a> | <a href="https://d1qri8o0k49d18.cloudfront.net/tktpt?bpwpd" target="_blank">阿波罗网</a> | <a href="https://doyvntponycdh.cloudfront.net/Mjpvu?dxpbpr" target="_blank">干净世界</a> | <a href="https://d1or6b2roqil0x.cloudfront.net/10?lzpdo" target="_blank">退党服务</a> | <a href="https://d239x61949z6p.cloudfront.net/Rffqf?vhjkiar" target="_blank">明慧广播</a> | <a href="https://dm41kyod3ht9r.cloudfront.net/nw9Vn?zyusv" target="_blank">传奇时代</a> | <a href="https://d3siwajeg0khti.cloudfront.net/AF9AG?psenx" target="_blank">新境界影视</a> | <a href="https://d3b82atanl11dg.cloudfront.net/zqMQA?icink" target="_blank">文昭谈论</a> | <a href="https://d53tcmkdq4r1q.cloudfront.net/7?svyfcminr" target="_blank">明慧</a></p><p><a href="https://dn3dhcszbgs9s.cloudfront.net/9?vxmzykfj" target="_blank">大法</a> | <a href="https://d2zvse34bag8ol.cloudfront.net/3?uzuonolp" target="_blank">新唐人</a> | <a href="https://d1nu9fv1hhdo43.cloudfront.net/obAhT?mnrpivm" target="_blank">人民报</a> | <a href="https://dh9kqnflpbxz3.cloudfront.net/xXNHu?rbapmxnn" target="_blank">放光明</a> | <a href="https://d2184d78prq5kd.cloudfront.net/5?tlkdwofw" target="_blank">新纪元</a> | <a href="https://doyvntponycdh.cloudfront.net/6?hvlkegg" target="_blank">希望之声</a> | <a href="https://d8jw662akk94j.cloudfront.net/11?gerstnq" target="_blank">无界网络</a> | <a href="https://d12gl57lrewmhb.cloudfront.net/Pueji?vnfwccemo" target="_blank">追查国际</a> | <a href="https://d1jex6syje0yji.cloudfront.net/16?uhhmi" target="_blank">明慧之窗</a> | <a href="https://d1x2hvndm8f89d.cloudfront.net/LdvzZ?jgormza" target="_blank">细语人生</a> | <a href="https://d1z1i6xmekcnf1.cloudfront.net/fBn3r?xhilanlyh" target="_blank">新世纪影视</a> | <a href="https://ddtx9y1vir8bp.cloudfront.net/PUWMb?ybiqfo" target="_blank">江峰时刻</a> | <a href="https://d282b678eon3c.cloudfront.net/8?csacyp" target="_blank">正见</a></p></td></tr>
+<tr><td VALIGN=TOP width="370" height="1000"><a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309935.md#1"><img width="320" src="https://i.epochtimes.com/assets/uploads/2024/08/id14309961-1-320x200.png"><p align="center">洛杉矶突发4.4级地震 震感强烈 房子晃动</p></a>
+<a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309935.md#1" title="洛杉矶突发4.4级地震 震感强烈 房子晃动""><img width="73" src="https://i.epochtimes.com/assets/uploads/2024/08/id14309961-1-320x200.png">&nbsp;</a>
+<a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309918.md#1" title="硅谷富豪纷纷捐款给贺锦丽和川普""><img width="73" src="https://i.epochtimes.com/assets/uploads/2024/08/id14306049-Harris-Trump-320x200.jpeg">&nbsp;</a>
+<a href="https://github.com/1992513/djy/blob/master/gb/24/8/11/n14309164.md#1" title="近几年来不断被失踪的法轮功学员""><img width="73" src="https://i.epochtimes.com/assets/uploads/2024/07/id14290570-2407112241561160-600x400-1-320x200.jpg">&nbsp;</a>
+<a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309845.md#1" title="盘点贺锦丽在九大关键政策上的立场""><img width="73" src="https://i.epochtimes.com/assets/uploads/2024/08/id14309901-Harris-Progressive-Policy-LL-10-OP-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309856.md#1" title="逃离人间地狱 大陆80后见证中共暴行""><img width="73" src="https://i.epochtimes.com/assets/uploads/2011/05/1105310454212320-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309817.md#1" title="中共发18卫星挑战星链 专家：存技术障碍""><img width="73" src="https://i.epochtimes.com/assets/uploads/2024/08/id14309818-GettyImages-2158701398-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309766.md#1" title="杭州保安逼女骑手下跪 引发数百外卖员抗议""><img width="73" src="https://i.epochtimes.com/assets/uploads/2024/08/id14309829-MixCollage-12-Aug-2024-03-45-PM-6898-320x200.jpg">&nbsp;</a>
@@ -9,20 +12,17 @@
 <a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309661.md#1" title="中共国安手伸向留学申请书 专家批草木皆兵""><img width="73" src="https://i.epochtimes.com/assets/uploads/2023/01/id13904263-163321.jpg">&nbsp;</a>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309575.md#1" title="中国内需疲软 跨国企业：消费信心极低""><img width="73" src="https://i.epochtimes.com/assets/uploads/2024/08/id14309577-GettyImages-2165157487-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309622.md#1" title="美防长要求航母赶赴中东 再派潜艇前往""><img width="73" src="https://i.epochtimes.com/assets/uploads/2022/04/id13701011-220401-N-XB641-1035-320x200.jpg">&nbsp;</a>
-<a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309562.md#1" title="医生涉山西奥瑞买尸案 牵出“案中案”？""><img width="73" src="https://i.epochtimes.com/assets/uploads/2024/07/id14285633-693971-320x200.jpg">&nbsp;</a>
-<a href="https://github.com/1992513/djy/blob/master/gb/24/8/11/n14309228.md#1" title="应对中共威胁 澳洲将与东南亚14国联合军演""><img width="73" src="https://i.epochtimes.com/assets/uploads/2022/01/id13527876-GettyImages-167942331-320x200.jpg">&nbsp;</a>
-<a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308289.md#1" title="印度两校办班 逾千名师生学炼法轮功""><img width="73" src="https://i.epochtimes.com/assets/uploads/2024/08/id14308352-2024-8-8-india-hongfa_07-320x200.jpg">&nbsp;</a>
 <p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://1992513.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>18分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309903.md#1">英文微电影《不靠谱小姐》 清新风获赞</a><br>
-:clock8: <em>26分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309870.md#1">研究：股票亏损压力大 中国股民急诊人数增多</a><br>
-:clock8: <em>30分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309935.md#1">加州华人区突发4.4级地震 震感强烈 房子晃动</a><br>
-:clock8: <em>34分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309845.md#1">盘点贺锦丽在九大关键政策上的立场</a><br>
-:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309835.md#1">【探索时分】库尔斯克战役开打 海马斯围点打援</a><br>
+:clock8: <em>7分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309935.md#1">洛杉矶突发4.4级地震 震感强烈 房子晃动</a><br>
+:clock8: <em>12分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309918.md#1">硅谷富豪纷纷捐款给贺锦丽和川普</a><br>
+:clock8: <em>13分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309938.md#1">伊朗本周内发动重大袭击？白宫：已做好准备</a><br>
+:clock8: <em>19分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/11/n14309164.md#1">近几年来不断被失踪的法轮功学员</a><br>
+:clock8: <em>38分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309903.md#1">英文微电影《不靠谱小姐》 清新风获赞</a><br>
+:clock8: <em>46分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309870.md#1">研究：股票亏损压力大 中国股民急诊人数增多</a><br>
+:clock8: <em>54分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309845.md#1">盘点贺锦丽在九大关键政策上的立场</a><br>
+:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309835.md#1">【探索时分】库尔斯克战役开打 海马斯围点打援</a><br>
 :clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309892.md#1">菲律宾指责中共军机动作非常危险 呼吁收敛</a><br>
 :clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309864.md#1">【漂流传奇】荣耀背后的影坛传奇许鞍华</a><br>
-:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309883.md#1">消息：中共承认货船损坏波罗的海天然气管道</a><br>
-:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309869.md#1">强热带风暴登陆日本东北部 带来创纪录降雨</a><br>
-:clock8: <em>3小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309858.md#1">退订付费服务太麻烦？美国政府立法简化程序?</a><br>
 <hr><h2><p><strong>新闻排行</strong></p></h2>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/8/11/n14308899.md#1">大陆多地取消楼市限价 或致房价断崖式下跌</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/8/11/n14309017.md#1">地方债近100万亿 专家：中共不够钱付利息</a><br>
@@ -108,8 +108,8 @@
 <a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307024.md#1">中国养老基金告急 分析：延迟退休治标不治本</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/8/5/n14305360.md#1">“被偷走的三年” 中国中产之家的润美心路</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14306958.md#1">孟加拉总理出逃前刚访京 一带一路添变数</a><br>
-<br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1">更多要闻......</a></p></td><td VALIGN=TOP rowspan=7 width="156" align="middle"><a href="https://d29yudo7x7ohq8.cloudfront.net/video/play/1034.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"><br>神韵古典舞表演</a><br><a href="https://d29yudo7x7ohq8.cloudfront.net/video/play/1154.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9ping.jpg" title="九评共产党" alt="九评共产党"><br>九评共产党</a><br><a href="https://d29yudo7x7ohq8.cloudfront.net/video/play/1118.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"><br>共产主义终极目的</a><br><a href="https://d29yudo7x7ohq8.cloudfront.net/video/play/1.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/weihuo.jpg" title="中共的伪火骗局"" alt="中共的伪火骗局""><br>中共的伪火骗局"</a><br><a href="https://d29yudo7x7ohq8.cloudfront.net/video/play/2.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/changzhi.jpg" title="古今奇观 藏字石" alt="古今奇观 藏字石"><br>古今奇观 藏字石</a><br><a href="https://d29yudo7x7ohq8.cloudfront.net/video/play/1044.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"><br>通往天安门的旅程</a><br><a href="https://d29yudo7x7ohq8.cloudfront.net/video/play/49.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/weilai.jpg" title="未来人的神话" alt="未来人的神话"><br>未来人的神话故事</a><br><a href="https://d29yudo7x7ohq8.cloudfront.net/video/play/1216.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"><br>中共罪恶的活摘</a><br><a href="https://d29yudo7x7ohq8.cloudfront.net/video/play/1080.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/huozhai.jpg" title="铁证如山" alt="铁证如山"><br>铁证如山</a><br><a href="https://d29yudo7x7ohq8.cloudfront.net/video/play/149.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"><br>一家四口死于暴政</a><br><a href="https://d29yudo7x7ohq8.cloudfront.net/video/play/150.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"><br>弟妹相继死于迫害</a><br><a href="https://d29yudo7x7ohq8.cloudfront.net/video/play/154.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"><br>她们被中共迫害死</a><br><a href="https://d29yudo7x7ohq8.cloudfront.net/video/play/153.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"><br>双城血泪</a><br><a href="https://d29yudo7x7ohq8.cloudfront.net/video/play/21.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"><br>无罪辩护震撼人心</a><br><a href="https://d29yudo7x7ohq8.cloudfront.net/video/play/158.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6c10-720.jpg" title="中共的迫害与掩盖" alt="中共的迫害与掩盖"><br>中共的迫害与掩盖</a><br><a href="https://d29yudo7x7ohq8.cloudfront.net/video/play/30.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"><br>中共官员的选择</a><br><a href="https://d29yudo7x7ohq8.cloudfront.net/video/play/3.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1400l.jpg" title="剖析中共造假" alt="剖析中共造假"><br>剖析中共造假</a><br><a href="https://d29yudo7x7ohq8.cloudfront.net/video/play/1103.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/425.jpg" title="万人上访真相" alt="万人上访真相"><br>万人上访真相</a><br><a href="https://d29yudo7x7ohq8.cloudfront.net/video/play/121.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"><br>被迫害的清华学子</a><br><a href="https://d29yudo7x7ohq8.cloudfront.net/video/play/14.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/jian-z513.jpg" title="见证五月十三日" alt="见证五月十三日"><br>见证五月十三日</a><br><a href="https://d29yudo7x7ohq8.cloudfront.net/video/play/1096.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"><br>功夫 寻道</a><br><a href="https://d29yudo7x7ohq8.cloudfront.net/video/play/1104.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"><br>歌唱家的人生奇迹</a><br><a href="https://d29yudo7x7ohq8.cloudfront.net/video/play/163.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"><br>名校精英的选择</a><br><a href="https://d29yudo7x7ohq8.cloudfront.net/video/play/18.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"><br>音乐之家的故事</a><br><a href="https://d29yudo7x7ohq8.cloudfront.net/video/play/33.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"><br>平凡中的不平凡</a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/nizhibeituolanlao.jpg" title="善良女士被投男牢"  alt="善良女士被投男牢"><br>善良女士被投男牢</a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/huozhai1.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"><br>警卫目击中共活摘</a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/motoumks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"><br>马克思的成魔之路</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/konggaojm.jpg" title="303万人的举报"  alt="303万人的举报"><br>303万人的举报</a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/lianganduibi.jpg" title="海峡两岸强烈反差"  alt="海峡两岸强烈反差"><br>海峡两岸强烈反差</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"><br>印度媒体报道东方</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/xuejiao.jpg" title="不一样的海外校园"  alt="不一样的海外校园"><br>不一样的海外校园</a><br>
-<tr><td VALIGN=middle width="370"><div align="center"><h2><a href="http://d29yudo7x7ohq8.cloudfront.net/UmhjM">我要退出中共的党团队</a></h2>昨日三退人数: 40,821</div><br></td><td VALIGN=middle width="371"><h3 align="center"><strong align="center">
+<br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1">更多要闻......</a></p></td><td VALIGN=TOP rowspan=7 width="156" align="middle"><a href="https://d21sirakrva3v.cloudfront.net/video/play/1034.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"><br>神韵古典舞表演</a><br><a href="https://d21sirakrva3v.cloudfront.net/video/play/1154.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9ping.jpg" title="九评共产党" alt="九评共产党"><br>九评共产党</a><br><a href="https://d21sirakrva3v.cloudfront.net/video/play/1118.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"><br>共产主义终极目的</a><br><a href="https://d21sirakrva3v.cloudfront.net/video/play/1.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/weihuo.jpg" title="中共的伪火骗局"" alt="中共的伪火骗局""><br>中共的伪火骗局"</a><br><a href="https://d21sirakrva3v.cloudfront.net/video/play/2.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/changzhi.jpg" title="古今奇观 藏字石" alt="古今奇观 藏字石"><br>古今奇观 藏字石</a><br><a href="https://d21sirakrva3v.cloudfront.net/video/play/1044.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"><br>通往天安门的旅程</a><br><a href="https://d21sirakrva3v.cloudfront.net/video/play/49.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/weilai.jpg" title="未来人的神话" alt="未来人的神话"><br>未来人的神话故事</a><br><a href="https://d21sirakrva3v.cloudfront.net/video/play/1216.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"><br>中共罪恶的活摘</a><br><a href="https://d21sirakrva3v.cloudfront.net/video/play/1080.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/huozhai.jpg" title="铁证如山" alt="铁证如山"><br>铁证如山</a><br><a href="https://d21sirakrva3v.cloudfront.net/video/play/149.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"><br>一家四口死于暴政</a><br><a href="https://d21sirakrva3v.cloudfront.net/video/play/150.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"><br>弟妹相继死于迫害</a><br><a href="https://d21sirakrva3v.cloudfront.net/video/play/154.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"><br>她们被中共迫害死</a><br><a href="https://d21sirakrva3v.cloudfront.net/video/play/153.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"><br>双城血泪</a><br><a href="https://d21sirakrva3v.cloudfront.net/video/play/21.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"><br>无罪辩护震撼人心</a><br><a href="https://d21sirakrva3v.cloudfront.net/video/play/158.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6c10-720.jpg" title="中共的迫害与掩盖" alt="中共的迫害与掩盖"><br>中共的迫害与掩盖</a><br><a href="https://d21sirakrva3v.cloudfront.net/video/play/30.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"><br>中共官员的选择</a><br><a href="https://d21sirakrva3v.cloudfront.net/video/play/3.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1400l.jpg" title="剖析中共造假" alt="剖析中共造假"><br>剖析中共造假</a><br><a href="https://d21sirakrva3v.cloudfront.net/video/play/1103.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/425.jpg" title="万人上访真相" alt="万人上访真相"><br>万人上访真相</a><br><a href="https://d21sirakrva3v.cloudfront.net/video/play/121.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"><br>被迫害的清华学子</a><br><a href="https://d21sirakrva3v.cloudfront.net/video/play/14.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/jian-z513.jpg" title="见证五月十三日" alt="见证五月十三日"><br>见证五月十三日</a><br><a href="https://d21sirakrva3v.cloudfront.net/video/play/1096.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"><br>功夫 寻道</a><br><a href="https://d21sirakrva3v.cloudfront.net/video/play/1104.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"><br>歌唱家的人生奇迹</a><br><a href="https://d21sirakrva3v.cloudfront.net/video/play/163.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"><br>名校精英的选择</a><br><a href="https://d21sirakrva3v.cloudfront.net/video/play/18.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"><br>音乐之家的故事</a><br><a href="https://d21sirakrva3v.cloudfront.net/video/play/33.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"><br>平凡中的不平凡</a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/nizhibeituolanlao.jpg" title="善良女士被投男牢"  alt="善良女士被投男牢"><br>善良女士被投男牢</a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/huozhai1.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"><br>警卫目击中共活摘</a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/motoumks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"><br>马克思的成魔之路</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/konggaojm.jpg" title="303万人的举报"  alt="303万人的举报"><br>303万人的举报</a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/lianganduibi.jpg" title="海峡两岸强烈反差"  alt="海峡两岸强烈反差"><br>海峡两岸强烈反差</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"><br>印度媒体报道东方</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/xuejiao.jpg" title="不一样的海外校园"  alt="不一样的海外校园"><br>不一样的海外校园</a><br>
+<tr><td VALIGN=middle width="370"><div align="center"><h2><a href="http://d21sirakrva3v.cloudfront.net/UmhjM">我要退出中共的党团队</a></h2>昨日三退人数: 40,821</div><br></td><td VALIGN=middle width="371"><h3 align="center"><strong align="center">
 
 ```diff
 !退出中共党、团、队总人数:
